src/test/resources/error/resolverReturningInterfaceIllegalArguments/schema.graphqls
type Kull implements Node @node {
  id: ID!
  navn: String! @column(name : "STUDIEKULLNAVN")
  referertNode: Node @resolver
}

interface Node {
  id: ID!
}

type ProgramStudierett implements Node @node(table : "STUDIERETT") {
  id: ID!
  navn: String!
}

type Query {
  kull(navn: String!): Kull
}
